--- a/elixir_buildpack.config
+++ b/elixir_buildpack.config
@@ -1,4 +1,4 @@
-always_rebuild=false
+always_rebuild=true
 config_vars_to_export=(SECRET_KEY_BASE HEROKU_HOST)
 erlang_version=19.0.2
 elixir_version=1.3.2
